// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Posts should render error message 1`] = `
<View>
  <Text>
    Error :(
  </Text>
</View>
`;

exports[`Posts should render loading state correctly 1`] = `
<View>
  <Text>
    Loading...
  </Text>
</View>
`;

exports[`Posts should render two Post components 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "author": "Author1",
        "body": "Body1",
        "id": "1",
      },
      Object {
        "author": "Author2",
        "body": "Body2",
        "id": "2",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text
          className="author__copy"
          style={
            Object {
              "color": "purple",
              "fontWeight": "bold",
              "marginVertical": 5,
              "textAlign": "center",
            }
          }
        >
          Author1
        </Text>
      </View>
      <View
        style={
          Object {
            "marginVertical": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "orange",
              "textAlign": "center",
            }
          }
        >
          Body1
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text
          className="author__copy"
          style={
            Object {
              "color": "purple",
              "fontWeight": "bold",
              "marginVertical": 5,
              "textAlign": "center",
            }
          }
        >
          Author2
        </Text>
      </View>
      <View
        style={
          Object {
            "marginVertical": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "orange",
              "textAlign": "center",
            }
          }
        >
          Body2
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
